--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost/majoingun
 spring.datasource.username=majoingun
 spring.datasource.password=pingu123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.testOnBorrow=true
+spring.datasource.validationQuery=SELECT 1
+#DO NOT change this property value, this can cause lost all data in database
+spring.jpa.hibernate.ddl-auto=validate
 server.port=8090
